<resources>
    <string name="app_name">Textile</string>
    <string name="Timetable">TIMETABLE</string>
    <string name="Syllabus">SYLLABUS</string>
    <string name="textile">Textile Manufactures</string>
    <string name="download">DOWNLOAD</string>
    <string name="ty">SYLLABUS FOR T.Y.BTECH</string>
    <string name="grades">GRADES</string>
    <string name="hint">Enter name of the file (EXAM_COURSENAME)</string>
    <string name="UPLOAD">UPLOAD FILE</string>
    <string name="TEXT">No file selected</string>
</resources>
