<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TEXT_Grades"
    tools:ignore="ContentDescription">
    <include
        android:id="@+id/toolbar4"
        layout="@layout/toolbar4"/>

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar4"
        android:layout_marginTop="30dp"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/button57"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit"
        android:background="#00bcd4"
        android:text="@string/UPLOAD"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>



    </LinearLayout>

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button57"
        android:gravity="center_horizontal"
        android:text="@string/TEXT"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ListView
        android:id="@+id/listView"
        style="@android:style/Widget.DeviceDefault.Light.ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewStatus"
        android:layout_marginTop="1dp"
        android:fastScrollAlwaysVisible="true"
        android:fastScrollEnabled="true" />

</RelativeLayout>